# demo_cmake_conan

./: .gitignore  CMakeLists.txt  README.md  build_and_compile.bat  conanfile.py  windows-vs
proto/: ecu_state.proto
src/: main.cpp
